@startuml

title __A24POINTSGAME's Class Diagram__\n

  namespace com.example.a24pointsgame {
    class com.example.a24pointsgame.AboutMe {
        # onCreate()
    }
  }
  

  namespace com.example.a24pointsgame {
    class com.example.a24pointsgame.GameActivity {
        {static} - TAG : String
        - card1 : ImageButton
        - card2 : ImageButton
        - card3 : ImageButton
        - card4 : ImageButton
        - chooseCards : List<ImageButton>
        - chooseCardsName : String[]
        - chooseNums : int[]
        - curCardBackId : int
        - curCardId : int
        - curCardName : String
        - curCardNum : int
        - sta : Stack<Integer>
        - sta2 : Stack<ImageButton>
        - welcome : String
        + backCards()
        + chooseCard()
        + clearCards()
        + getCardNum()
        + getTips()
        + insertCard()
        # onCreate()
    }
  }
  

  namespace com.example.a24pointsgame {
    class com.example.a24pointsgame.Guide {
        # onCreate()
    }
  }
  

  namespace com.example.a24pointsgame {
    class com.example.a24pointsgame.MainActivity {
        - aboutBnt : Button
        - guideBnt : Button
        - playBnt : Button
        # onCreate()
        - addListener()
        - initComponent()
    }
  }
  

  namespace com.example.a24pointsgame {
    class com.example.a24pointsgame.Point24 {
        {static} ~ EPSILON : double
        {static} ~ TARGET : int
        {static} ~ add : int
        {static} ~ div : int
        {static} ~ mul : int
        {static} ~ sub : int
        - equations : List<String>
        + getPoint24Equ()
        - dfs()
    }
  }
  

  com.example.a24pointsgame.AboutMe -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.a24pointsgame.GameActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.a24pointsgame.GameActivity o-- com.example.a24pointsgame.Point24 : point24
  com.example.a24pointsgame.Guide -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.a24pointsgame.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
